CloudNative/microservices/main/k8s/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  replicas: 3
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: ronasor1/productservice:latest
        ports:
        - containerPort: 8080
