CloudNative/microservices/main/k8s/product-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: product-pod
spec:
  containers:
  - name: product
    image: ronasor1/productservice:latest
    ports:
    - containerPort: 8080
