CloudNative/microservices/main/k8s/product.yaml
#deploy configuration of a container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  replicas: 3
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: ronasor1/productservice:latest
        ports:
        - containerPort: 8080
---
#configure service connection to a targeted port
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#   type: LoadBalancer
---
#allow ingress configuration to route netwrok
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
spec:
  rules:
  - host: product.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
